[gd_scene load_steps=6 format=3 uid="uid://5nldstxs0t28"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_6ovmg"]
[ext_resource type="Texture2D" uid="uid://dhfc6b25vn77p" path="res://sprites/background/BG.png" id="2_djacg"]
[ext_resource type="Texture2D" uid="uid://c1chi24380u6" path="res://sprites/ui/Start_BTN.png" id="3_pbgrn"]
[ext_resource type="Texture2D" uid="uid://tmnnww07ukl2" path="res://sprites/ui/Exit_BTN.png" id="4_iodyk"]
[ext_resource type="Texture2D" uid="uid://cw7jdhknvmyq7" path="res://sprites/ui/Rating_BTN.png" id="5_gna3w"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ovmg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 723.0
offset_bottom = 1081.0
texture = ExtResource("2_djacg")
expand_mode = 1

[node name="StartButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 134.0
offset_top = 312.0
offset_right = 568.0
offset_bottom = 423.0
texture_normal = ExtResource("3_pbgrn")
ignore_texture_size = true
stretch_mode = 0

[node name="ExitButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 162.0
offset_top = 806.0
offset_right = 541.0
offset_bottom = 896.0
texture_normal = ExtResource("4_iodyk")
ignore_texture_size = true
stretch_mode = 0

[node name="ScoresButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 251.0
offset_top = 519.0
offset_right = 468.0
offset_bottom = 702.0
texture_normal = ExtResource("5_gna3w")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="TextureRect/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="TextureRect/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="TextureRect/ScoresButton" to="." method="_on_record_button_pressed"]
